# Neon

./: .gitignore  CGFusion.md  CMakeLists.txt  profiling.sh
libNeonDomain/include/Neon/domain/internal/dGrid/: dGrid_imp.h  dPartition.h
libNeonDomain/include/Neon/domain/patterns/: PatternScalar.h  PatternScalar_imp.h
libNeonSkeleton/tests/unit/sUt_skeletonOnStreams/src/: sUt_skeleton.onStream.kernels.h
libNeonSolver/include/Neon/solver/linear/krylov/: CG.h
libNeonSolver/include/Neon/solver/linear/matvecs/: LaplacianMatVec.h
libNeonSolver/src/linear/krylov/: CG.cpp
libNeonSolver/src/linear/matvecs/: LaplacianMatVec.cu
libNeonSolver/tests/perf/solverPt_Poisson/: CMakeLists.txt
libNeonSolver/tests/perf/solverPt_Poisson/src/: solverPt_Poisson.cpp  test.cu
libNeonSolver/tests/poisson/include/: Poisson.h
libNeonSolver/tests/poisson/src/: poisson.cpp
optimization/: CMakeLists.txt
optimization/fusion/: CMakeLists.txt
optimization/fusion/map/: CMakeLists.txt
optimization/fusion/map/include/: map.h
optimization/fusion/map/src/: function_calls.cpp  map.cpp  map_container.cu
optimization/fusion/scripts/: gpu_scaling.sh
optimization/fusion/stencil-map/: CMakeLists.txt
optimization/fusion/stencil-map/include/: stencil_map.h
optimization/fusion/stencil-map/src/: stencil_map.cpp  stencil_map_container.cu
optimization/fusion/utils/: generate_function_calls.py  generate_template_instantiation.py  plot_scalability.py
